Botón hacia atras bienvenido

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -11,8 +11,9 @@
 <div class="group">
   <form action="ingresar.php" method="POST">
   <h2><em>Registro Completo</em></h2>
+  <button onclick="location.href='./index.html'">Atras</button>
 
   </form>
 </div>
 </body>
-</html>
+</html>ss
