--- a/error.html
+++ b/error.html
@@ -16,6 +16,7 @@
   <p><em>La dirección de correo electrónico que usted ha proporcionado ha sido previamente registrada en nuestra base de datos.</em></p>
 
     <center><input class="form-btn"  onClick="window.location.href='index.html'" name="submit" type="button" value="Atrás" /></center>
+    <center><button  class="boton" onClick="location.href='index.html'">Aceptar</button></center>
 
 
   </form>
