Modificacion de bienvenido y nuevo archivo

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -12,6 +12,7 @@
   <form action="ingresar.php" method="POST">
   <h2><em>Registro Completo</em></h2>
   <button onclick="location.href='./index.html'">Atras</button>
+  <button onclick="location.href='./fernando.html'">Atras</button>
 
   </form>
 </div>
