--- a/error.html
+++ b/error.html
@@ -12,12 +12,10 @@
 
 <div class="group">
   <form action="ingresar.php" method="POST">
-  <h2><em>Registro Incompleto</em>!</h2>
+  <h2 class="boton"><em>Registro Incompleto</em>!</h2>
   <p><em>La dirección de correo electrónico que usted ha proporcionado ha sido previamente registrada en nuestra base de datos.</em></p>
 
-    <center><input class="form-btn"  onClick="window.location.href='index.html'" name="submit" type="button" value="Atrás" /></center>
-    <center><button  class="boton" onClick="location.href='index.html'">Aceptar</button></center>
-
+    <center><input class="form-btn"  onClick="window.location.href='index.html'" name="submit" type="button" value="Aceptar" /></center>
 
   </form>
 </div>
